fix: db + checkstyle + bugs