@@ -4,18 +4,23 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 import ru.yandex.practicum.filmorate.exceptions.ValidationException;
 import ru.yandex.practicum.filmorate.model.film.Film;
+import ru.yandex.practicum.filmorate.model.user.User;
+import ru.yandex.practicum.filmorate.service.DirectorService;
 import ru.yandex.practicum.filmorate.service.UserService;
 
-
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Set;
+import java.util.Objects;
 import java.util.stream.Collectors;
-
 
 @Slf4j
 @Component("inMemoryFilmStorage")
 public class InMemoryFilmStorage implements FilmStorage {
 
-    private final Map<Long, Film> films = new HashMap<>();
+    private final HashMap<Long, Film> films = new HashMap<>();
 
     private final UserService userService;
     private final DirectorService directorService;
@@ -30,20 +35,14 @@ public class InMemoryFilmStorage implements FilmStorage {
         films.remove(filmId);
     }
 
+
     @Override
     public List<Film> getPopularFilms(int count, Long genreId, Integer year) {
-
         return films.values().stream()
-                .filter(film -> genreId == null ||
-                        (film.getGenres() != null &&
-                                film.getGenres().stream()
-                                        .anyMatch(g -> g.getId().equals(genreId))))
-                .filter(film -> year == null ||
-                        (film.getReleaseDate() != null &&
-                                film.getReleaseDate().getYear() == year))
                 .sorted(Comparator.comparingLong(Film::getLikes).reversed())
                 .limit(count)
-                .toList();
+                .collect(Collectors.toList());
+
     }
 
     @Override
@@ -59,7 +58,7 @@ public class InMemoryFilmStorage implements FilmStorage {
     @Override
     public Film addFilm(Film film) {
         films.put(film.getId(), film);
-        log.info("Фильм {} создан.", film.getName());
+        log.info("Фильм с названием {} создан.", film.getName());
         return film;
     }
 
@@ -73,13 +72,19 @@ public class InMemoryFilmStorage implements FilmStorage {
     @Override
     public void addLike(Long filmId, Long userId) {
         Film film = getFilmById(filmId);
+        User user = userService.getUsersById(userId);
+
         film.addLike();
+        user.addLikesFilms(filmId);
     }
 
     @Override
     public void removeLike(Long filmId, Long userId) {
         Film film = getFilmById(filmId);
+        User user = userService.getUsersById(userId);
+
         film.dislike();
+        user.getLikesFilms().remove(filmId);
     }
 
     public long nextIdGenerate() {
@@ -91,13 +96,15 @@ public class InMemoryFilmStorage implements FilmStorage {
         return ++nextId;
     }
 
-
     @Override
     public List<Film> getCommonFilms(Long userId, Long friendId) {
         Set<Long> friendFilmList = userService.getUsersById(friendId).getLikesFilms();
-        return userService.getUsersById(userId).getLikesFilms().stream().
-                filter(friendFilmList::contains).map(films::get).
-                filter(Objects::nonNull).sorted((film1, film2) -> (int) (film2.getLikes() - film1.getLikes()))
+
+        return userService.getUsersById(userId).getLikesFilms().stream()
+                .filter(friendFilmList::contains)
+                .map(films::get)
+                .filter(Objects::nonNull)
+                .sorted((film1, film2) -> (int) (film2.getLikes() - film1.getLikes()))
                 .collect(Collectors.toList());
     }
 
